--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonp-promise": "^0.1.2",
     "node-sass": "^4.3.0",
     "react": "15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.2",
     "sass-loader": "^4.0.2"
   },
